<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="allam9072.mealplanner.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_weeks"
            app:destination="@id/nav_weeks" />
        <action
            android:id="@+id/action_nav_home_to_marketFragment"
            app:destination="@id/marketFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_weeks"
        android:name="allam9072.mealplanner.ui.list_weeks.WeeksFragment"
        android:label="@string/menu_weeks"
        tools:layout="@layout/fragment_weeks" />

    <fragment
        android:id="@+id/nav_shoppingList"
        android:name="allam9072.mealplanner.ui.list_shopping.ShoppingListFragment"
        android:label="@string/menu_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/nav_pantryList"
        android:name="allam9072.mealplanner.ui.list_pantry.PantryListFragment"
        android:label="@string/menu_pantry_list"
        tools:layout="@layout/fragment_pantry_list" />

    <fragment
        android:id="@+id/nav_groceryList"
        android:name="allam9072.mealplanner.ui.list_grocery.GroceryListFragment"
        android:label="@string/menu_grocery_list"
        tools:layout="@layout/fragment_grocery_list" />

    <fragment
        android:id="@+id/nav_MyShoppingBasket"
        android:name="allam9072.mealplanner.ui.list_MyShoppingBasket.MyShoppingBasketFragment"
        android:label="@string/menu_my_shopping_basket"
        tools:layout="@layout/fragment_my_shopping_basket" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="allam9072.mealplanner.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/favorite_fragment" />
<<<<<<< HEAD
=======
    <fragment
        android:id="@+id/categroyDetailsFragment"
        android:name="allam9072.mealplanner.ui.Market.CategroyDetailsFragment"
        android:label="categroy_details_fragment"
        tools:layout="@layout/categroy_details_fragment" />
    <fragment
        android:id="@+id/marketFragment"
        android:name="allam9072.mealplanner.ui.Market.MarketFragment"
        android:label="MarketFragment">
        <action
            android:id="@+id/action_marketFragment_to_categroyDetailsFragment"
            app:destination="@id/categroyDetailsFragment" />
    </fragment>
>>>>>>> 5b85b402d9001178bead429d35c7e4c6fb830356

</navigation>